hphp/hack/test/typecheck/shape_typedef_with_unknown_fields_not_at_end.php
<?hh // partial

type ShapeWithUnknownFieldsNotAtEnd = shape(
  'a' => int,
  ...,
  'b' => int,
);
